--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ django-autoslug==1.9.9
 django-tinymce==4.1.0
 sqlparse==0.5.1
 typing_extensions==4.12.2
+pymysql>=1.0
+python-decouple>=3.5
+pandas>=1.0
+
